tests/inputs/errors/E006.bib
@string{cvpr = {Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}}
@string{ijrr = {Intl. Journal of Robotics Research}}
@string{arxiv = {arXiv preprint}}

@article{wang2023arxiv,
  author  = {R. Wang and A. Test},
  title   = {{Producing a valid BibTeX entry is not that hard: A study}},
  journal = arxiv,
  volume  = {arxiv:2306.00453},
  year    = 2023,
  url     = {https://openaccess.thecvf.com/content/CVPR2023/papers/Ci_GFPose_Learning_3D_Human_Pose_Prior_With_Gradient_Fields_CVPR_2023_paper.pdf}
}